tests/rosetta/out/Rust/bitmap-midpoint-circle-algorithm.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiToRustbitmap-midpoint-circle-algorithm1290167198/001/prog.rs:55:36
   |
55 |         while end > 0 && row[end - 1 as usize] == " " {
   |                                    ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot subtract `usize` from `i32`
  --> /tmp/TestMochiToRustbitmap-midpoint-circle-algorithm1290167198/001/prog.rs:55:34
   |
55 |         while end > 0 && row[end - 1 as usize] == " " {
   |                                  ^ no implementation for `i32 - usize`
   |
   = help: the trait `Sub<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&i32` implements `Sub<i32>`
             `&i32` implements `Sub`
             `i32` implements `Sub<&i32>`
             `i32` implements `Sub`

error[E0277]: the type `[&'static str]` cannot be indexed by `i32`
  --> /tmp/TestMochiToRustbitmap-midpoint-circle-algorithm1290167198/001/prog.rs:55:30
   |
55 |         while end > 0 && row[end - 1 as usize] == " " {
   |                              ^^^^^^^^^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[&'static str]>` is not implemented for `i32`
           but it is implemented for `usize`
   = help: for that trait implementation, expected `usize`, found `i32`
   = note: required for `Vec<&'static str>` to implement `Index<i32>`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustbitmap-midpoint-circle-algorithm1290167198/001/prog.rs:61:13
   |
61 |             s += row[i as usize];
   |             -^^^^^^^^^^^^^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

warning: variable does not need to be mutable
  --> /tmp/TestMochiToRustbitmap-midpoint-circle-algorithm1290167198/001/prog.rs:66:9
   |
66 |     let mut g = circle(10);
   |         ----^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0308, E0368.
For more information about an error, try `rustc --explain E0277`.
